fix(puf): cards clipped at 500px

--- a/express/blocks/puf/puf.css
+++ b/express/blocks/puf/puf.css
@@ -229,6 +229,7 @@ main .puf .puf-right {
     }
 
     main .block.puf .carousel-platform {
+        max-height: unset;
         margin: 0 auto;
     }
 
